# altis

./: .gitignore  CMakeLists.txt
config/: get_cuda_sm.sh
config/cuda_device_attr_gen/: Makefile
src/common/: CMakeLists.txt
src/cuda/level1/: CMakeLists.txt
src/cuda/level1/bfs/: bfs.cu
src/cuda/level1/gemm/: Gemm.cu
src/cuda/level2/: CMakeLists.txt
tools/: collect_metrics.py  profile.sh  profile_default_altis.sh
